--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "joi": "^17.11.0",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.6",
-    "yarn": "^1.22.22"
+    "nanoid": "^5.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
