--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-node-rest-api",
   "type": "module",
   "scripts": {
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
     "start": "node ./app.js",
     "dev": "nodemon ./app.js"
   },
@@ -19,9 +20,13 @@
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.6"
+    "nanoid": "^5.0.6",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.4"
   }
 }
